<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_tentang_aplikasi"
            android:padding="8dp"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/anggota_tentang_aplikasi_1"
            android:textSize="12sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/anggota_tentang_aplikasi_2"
            android:textSize="12sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/anggota_tentang_aplikasi_3"
            android:textSize="12sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/anggota_tentang_aplikasi_4"
            android:textSize="12sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/anggota_tentang_aplikasi_5"
            android:textSize="12sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/anggota_tentang_aplikasi_6"
            android:textSize="12sp"
            android:textColor="@color/black" />

    </LinearLayout>


</FrameLayout>