<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_with_text"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/subtitle_pusat_bantuan"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/detail_pusat_bantuan_1"
            android:textSize="12sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/detail_pusat_bantuan_2"
            android:textSize="12sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/detail_pusat_bantuan_3"
            android:textSize="12sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/detail_pusat_bantuan_4"
            android:textSize="12sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/detail_pusat_bantuan_5"
            android:textSize="12sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/detail_pusat_bantuan_6"
            android:textSize="12sp"
            android:textColor="@color/black" />
    </LinearLayout>

</FrameLayout>