<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.rechit.share.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.rechit.share.ui.report.ReportFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.rechit.share.ui.notification.NotificationFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_notification" />

</navigation>