<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/title_uutpks"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="11sp"
                android:text="@string/detail_uutpks" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:text="@string/title_jenis_kekerasan" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/title_jenis_kekerasan">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/img_jenis_kekerasan_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="4dp"
                        android:src="@drawable/jenis_kekerasan_1" />
                    <ImageView
                        android:id="@+id/img_jenis_kekerasan_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="4dp"
                        android:src="@drawable/jenis_kekerasan_2" />
                    <ImageView
                        android:id="@+id/img_jenis_kekerasan_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="4dp"
                        android:src="@drawable/jenis_kekerasan_3" />
                    <ImageView
                        android:id="@+id/img_jenis_kekerasan_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="4dp"
                        android:src="@drawable/jenis_kekerasan_4" />
                    <ImageView
                        android:id="@+id/jenis_kekerasan_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="4dp"
                        android:src="@drawable/jenis_kekerasan_5" />
                    <ImageView
                        android:id="@+id/jenis_kekerasan_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="4dp"
                        android:src="@drawable/jenis_kekerasan_6" />
                    <ImageView
                        android:id="@+id/jenis_kekerasan_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="4dp"
                        android:src="@drawable/jenis_kekerasan_7" />
                    <ImageView
                        android:id="@+id/jenis_kekerasan_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="4dp"
                        android:src="@drawable/jenis_kekerasan_8" />
                    <ImageView
                        android:id="@+id/jenis_kekerasan_9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="4dp"
                        android:src="@drawable/jenis_kekerasan_9" />
                </LinearLayout>
            </ScrollView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:text="@string/title_hak_korban" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabBackground="@color/white"
                app:tabIndicatorColor="?attr/colorPrimary"
                app:tabTextColor="@color/black"/>
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#F9F9F9"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/title_partner_psikolog_kami"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_psikolog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

</FrameLayout>